<resources>
    <string name="app_name">ラブカツ</string>
    <string name="title_chat">チャット</string>
    <string name="title_home">ホーム</string>
    <string name="title_search">検索</string>
    <string name="title_setting">設定</string>
    <string name="title_dashboard">マイページ</string>
    <string name="msg">メッセージ</string>
    <string name="confirm">確認</string>
    <string name="update">更新する</string>
    <string name="newsBadge">新着</string>
    <string name="close_btn">×</string>
    <string name="ProfilePics">プロフィール写真</string>
    <string name="keep">保存しました</string>
    <string name="OK">OK</string>
    <string name="Age">年齢</string>
    <string name="news">新着</string>
    <string name="useway">利用方法</string>
    <string name="rmdapp">おすすめアプリ</string>
    <string name="StartChat">チャット開始</string>
    <string name="Address">住まい</string>
    <string name="Hide">非表示</string>
    <string name="Block">ブロック</string>
    <string name="Contact">お問合せ</string>
    <string name="YourAddress">東京都新宿区</string>
    <string name="intro">自己紹介</string>
    <string name="footsteps">あしあと</string>
    <string name="recommendApp">おすすめアプリ</string>
    <string name="chat">チャット</string>
    <string name="chat_txt">チャット</string>
    <string name="recommend">お気に入り</string>
    <string name="searchTxt">検索</string>
    <string name="search">検索</string>
    <string name="city_limits">市域</string>
    <string name="home">ホーム</string>
    <string name="mypage">マイページ</string>
    <string name="introText">ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。</string>
    <string name="Profile">ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。</string>
    <string name="appText">ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。ここには自己紹介のテキストが表示されます。</string>
    <string name="setting">設定</string>
    <string name="msg_count">メッセージ履歴がありません。</string>
    <string name="suggest">検索より素敵な相手を見つけてください。</string>
    <string name="favorite_member">まだお気に入りに登録されていません。</string>
    <string name="starttxt">開始</string>
    <string name="NickNameBox">ニックネーム</string>
    <string name="NickNameTxt">ニックネーム</string>
    <string name="_23">23歳</string>
    <string name="YourAge">23歳</string>
    <string name="gender">性別</string>
    <string name="YourDate">8/31</string>
    <string name="YourTime">08:22</string>
    <string name="prefname">地域選択</string>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="agelist">年齢選択</string>
    <string name="terms">利用規約</string>
    <string name="Operation">運営情報</string>
    <string name="policy">プライバシーポリシー</string>
    <string name="notice">※登録後変更出来ません。</string>
    <string name="expPlef">東京都新宿区</string>
    <string name="close">×</string>
    <string name="title_activity_terms">TermsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_favorite01">Favorite01Activity</string>
    <string-array name="preflist">
        <item>北海道</item>
        <item>青森県</item>
        <item>岩手県</item>
        <item>宮城県</item>
        <item>秋田県</item>
        <item>山形県</item>
        <item>福島県</item>
        <item>茨城県</item>
        <item>栃木県</item>
        <item>群馬県</item>
        <item>埼玉県</item>
        <item>千葉県</item>
        <item>東京都</item>
        <item>神奈川県</item>
        <item>新潟県</item>
        <item>富山県</item>
        <item>石川県</item>
        <item>福井県</item>
        <item>山梨県</item>
        <item>長野県</item>
        <item>岐阜県</item>
        <item>静岡県</item>
        <item>愛知県</item>
        <item>三重県</item>
        <item>滋賀県</item>
        <item>京都府</item>
        <item>大阪府</item>
        <item>兵庫県</item>
        <item>奈良県</item>
        <item>和歌山県</item>
        <item>鳥取県</item>
        <item>島根県</item>
        <item>岡山県</item>
        <item>広島県</item>
        <item>山口県</item>
        <item>徳島県</item>
        <item>香川県</item>
        <item>愛媛県</item>
        <item>高知県</item>
        <item>福岡県</item>
        <item>佐賀県</item>
        <item>長崎県</item>
        <item>熊本県</item>
        <item>大分県</item>
        <item>宮崎県</item>
        <item>鹿児島県</item>
        <item>沖縄県</item>
    </string-array>
    <string-array name="agelist">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>