<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:longClickable="false"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:theme="@style/Theme.Love"
        android:transitionGroup="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Body1"
        app:titleTextColor="@color/white">
        <TextView
            android:id="@+id/NickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/title"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="4dp" />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/ProfileBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <FrameLayout
            android:id="@+id/PicsBox"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:paddingBottom="16dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/ProfileCamera"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/ProfilePics"
                android:onClick="onCameraImageClick"
                android:paddingStart="0dp"
                android:scaleType="center"
                app:srcCompat="@android:drawable/ic_menu_camera"
                tools:srcCompat="@drawable/aa" />
            <LinearLayout
                android:id="@+id/blocking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ProfileCamera"
                android:gravity="end"
                android:orientation="vertical"
                android:paddingTop="70dp"
                android:layout_gravity="right"
                android:layout_marginEnd="20dp">
                <Button
                    android:id="@+id/Hide"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:text="@string/Hide"
                    android:textSize="11sp"
                    app:backgroundTint="@color/grayBox"
                    tools:ignore="TouchTargetSizeCheck" />
                <Button
                    android:id="@+id/Block"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:text="@string/Block"
                    android:textSize="11sp"
                    app:backgroundTint="@color/grayBox"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        </FrameLayout>
        <LinearLayout
            android:id="@+id/AddressBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">
            <TextView
                android:id="@+id/Address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:text="@string/Address"
                android:textSize="11sp" />
            <TextView
                android:id="@+id/YourAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/YourAddress"
                android:layout_weight="1"
                android:textSize="11sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/AgeBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">
            <TextView
                android:id="@+id/Age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:text="@string/Age"
                android:textSize="11sp" />
            <TextView
                android:id="@+id/YourAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/YourAge"
                android:textSize="11sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/IntroBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">
            <TextView
                android:id="@+id/Intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:text="@string/Age"
                android:textSize="11sp" />
            <TextView
                android:id="@+id/Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/Profile"
                android:textColor="@color/txt_gray"
                android:textSize="11sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingTop="25dp">
            <Button
                android:id="@+id/chatStart"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/graybox"
                android:text="@string/StartChat"
                android:textSize="11sp"
                app:backgroundTint="@color/green_btn" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/MenuBox"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:background="@drawable/border"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/chat"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/chat"
            android:textColor="@color/green_txt"
            android:textSize="10sp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/ic_chat"
            app:iconGravity="textTop"
            app:iconSize="24dp"
            app:iconTint="@color/green_btn"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/search"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/search"
            android:textColor="@color/green_txt"
            android:textSize="10sp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/ic_search"
            app:iconGravity="textTop"
            app:iconSize="24dp"
            app:iconTint="@color/green_btn"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/home"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/home"
            android:textColor="@color/green_txt"
            android:textSize="10sp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/ic_home"
            app:iconGravity="textTop"
            app:iconSize="24dp"
            app:iconTint="@color/green_btn"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/mypage"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mypage"
            android:textColor="@color/green_txt"
            android:textSize="10sp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/ic_account"
            app:iconGravity="textTop"
            app:iconSize="24dp"
            app:iconTint="@color/green_btn"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/setting"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/setting"
            android:textColor="@color/green_txt"
            android:textSize="10sp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textTop"
            app:iconSize="24dp"
            app:iconTint="@color/green_btn"
            tools:ignore="SmallSp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>