<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/MenuBox"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:background="@drawable/border"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/chat"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/chat"
            android:textColor="@color/green_txt"
            android:textSize="10sp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/ic_chat"
            app:iconGravity="textTop"
            app:iconSize="24dp"
            app:iconTint="@color/green_btn"
            tools:ignore="SmallSp" />
        <Button
            android:id="@+id/search"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/search"
            android:textColor="@color/green_txt"
            android:textSize="10sp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/ic_search"
            app:iconGravity="textTop"
            app:iconSize="24dp"
            app:iconTint="@color/green_btn"
            tools:ignore="SmallSp" />
        <Button
            android:id="@+id/home"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/home"
            android:textColor="@color/green_txt"
            android:textSize="10sp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/ic_home"
            app:iconGravity="textTop"
            app:iconSize="24dp"
            app:iconTint="@color/green_btn"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/mypage"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mypage"
            android:textColor="@color/green_txt"
            android:textSize="10sp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/ic_account"
            app:iconGravity="textTop"
            app:iconSize="24dp"
            app:iconTint="@color/green_btn"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/setting"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/setting"
            android:textColor="@color/green_txt"
            android:textSize="10sp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textTop"
            app:iconSize="24dp"
            app:iconTint="@color/green_btn"
            tools:ignore="SmallSp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>