<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment">

    <LinearLayout
        android:id="@+id/BtnBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <Button
            android:id="@+id/starttxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/graybtnbox"
            android:text="@string/StartChat"
            app:backgroundTint="@color/green_btn" />

        <Button
            android:id="@+id/recommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/graybtnbox"
            android:text="@string/recommendApp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnBox">
        <view
            android:id="@+id/adBanner"
            class="androidx.appcompat.widget.AppCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/test_blue" />
        <LinearLayout
            android:id="@+id/BtnArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/Upper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:paddingRight="36dp"
                android:paddingLeft="36dp">
                <Button
                    android:id="@+id/terms"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="120dp"
                    android:layout_height="15pt"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/graybtnbox"
                    android:text="@string/terms"
                    android:textSize="4pt"
                    app:backgroundTint="@color/green_btn" />
                <Button
                    android:id="@+id/policy"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="120dp"
                    android:layout_height="15pt"
                    android:text="@string/policy"
                    android:layout_weight="1"
                    android:background="@drawable/graybtnbox"
                    android:textSize="4pt"
                    app:backgroundTint="@color/green_btn"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:paddingRight="36dp"
                android:paddingLeft="36dp">
                <Button
                    android:id="@+id/Operation"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="120dp"
                    android:layout_height="15pt"
                    android:layout_weight="1"
                    android:text="@string/Operation"
                    android:background="@drawable/graybtnbox"
                    android:textSize="4pt"
                    android:layout_marginEnd="24dp"
                    app:backgroundTint="@color/green_btn" />
                <Button
                    android:id="@+id/Contact"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="120dp"
                    android:layout_height="15pt"
                    android:text="@string/Contact"
                    android:layout_weight="1"
                    android:background="@drawable/graybtnbox"
                    android:textSize="4pt"
                    app:backgroundTint="@color/green_btn"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>